--- a/TODO.textile
+++ b/TODO.textile
@@ -2,7 +2,11 @@ h1. Todo
 
 h2. Short term
 
+* Add an index to ItemStats.item
+* Add Item tests to make sure that members aren't CREATED by buying an item, to help ensure we don't have typos in item purchases
+
 * Convert tests to RSpec
+* MemberRanks (prefix/suffix, show/hide?)
 * -Item pricing from Wowhead based on item level and slot-
 * Interface
 ** Tabbed ViewMember interface
@@ -11,8 +15,9 @@ h2. Short term
 
 h2. Medium term
 
-* Convert production EQdkp database to Rails format
-** Ensure data matches up (through tests?)
+* -Convert production EQdkp database to Rails format-
+** Applicants that have, like, two attended raids have a lifetime attendance of 1%?
+** -Ensure data matches up- (through tests?)
 * Administration
 ** New/Edit item pages
 
