--- a/TODO.textile
+++ b/TODO.textile
@@ -4,28 +4,44 @@ h2. Short term
 
 * Add Item tests to make sure that members aren't CREATED by buying an item, to help ensure we don't have typos in item purchases
 
-* Convert tests to RSpec
-* MemberRanks (prefix/suffix, show/hide?)
+* Learn RSpec
+** Convert tests to RSpec
+* MemberRanks (prefix/suffix, show/hide[?])
 * -Item pricing from Wowhead based on item level and slot-
-* Interface
-** Tabbed ViewMember interface
-** Glyph icons similar to IPBoard 3 for new/edit/delete
-** Drop-down menu system
+* Find out how to allow /members/Tsigo AS WELL AS /members/1234
+* Render (at the very least) /members/index as lua
 
 h2. Medium term
+
+* Interface Overhaul
+** Find sites I like and try to replicate them
+** Tabbed interface
+*** Needs at least two levels - We click 'Items' then we want to have a row for filters ('All', 'Normal', 'Best in Slot', 'Situational', 'Rot')
+*** ViewMember: Raids, Items, [Plugins: Wishlist/Achievements]; Should all be Ajax loaders
+*** ViewRaid: Attendees, Drops
+** Glyph icons similar to IPBoard 3 for edit/delete inside each row
+** Drop-down menu navigation system
+** Column sorting (Javascript? We use pagination)
 
 * -Convert production EQdkp database to Rails format-
 ** -Ensure data matches up- (through tests?)
 * Administration
 ** New/Edit item pages
+** Edit raid page
+
+* Item Normalization
+** If we rename an item, other items that used to have that name don't get renamed
 
 h2. Long term
 
 * -Wowhead item lookup (@item_cache@ replica)-
 * Users & Permissions
+** 'My Standing' link dependant on login status and whether or not a member of that name exists?
+** PLEASE try to make it hook into IPB's auth system, or at least write an auth system for IPB that writes user changes to the DKP side
 * Wishlists
 * Achievements
 * Administration
 ** Punishment system, for when we want to affect someone's loot factor without adding an item
 *** Allow an expiry time
-** Logging
+** Logging ('Tsigo added a raid on 2009-01-01')
+* Exception handling so people can't tell it's Rails (?)
