While fixing what seemed to be a counter_cache issue, uncovered a much bigger problem with how attendees were getting saved to a raid. Thanks, tests!

--- a/TODO.textile
+++ b/TODO.textile
@@ -3,7 +3,7 @@ h1. Todo
 h2. Short term
 
 * FIXME: The 2/10/2009 raid parse displays a blank member with 100% attendance on the Raids#show page
-* FIXME: The 2/10/2009 raid parse didn't cache its attendee count
+** Could not duplicate
 
 * Add Item tests to make sure that members aren't CREATED by buying an item, to help ensure we don't have typos in item purchases
 
