--- a/TODO.textile
+++ b/TODO.textile
@@ -11,8 +11,8 @@ h2. Short term
 ** -Convert tests to RSpec-
 * MemberRanks (prefix/suffix, show/hide[?])
 * -Item pricing from Wowhead based on item level and slot-
-* Find out how to allow /members/Tsigo AS WELL AS /members/1234
-* Render (at the very least) /members/index as lua
+* -Find out how to allow /members/Tsigo AS WELL AS /members/1234-
+* -Render (at the very least) /members/index as lua-
 
 h2. Medium term
 
