--- a/TODO.textile
+++ b/TODO.textile
@@ -7,22 +7,16 @@ h2. Bugs
 
 h2. Short term
 
-* -Learn RSpec-
-** -Convert tests to RSpec-
-* -MemberRanks (prefix/suffix,- show/hide[?])
-* -Item pricing from Wowhead based on item level and slot-
-* -Find out how to allow /members/Tsigo AS WELL AS /members/1234-
-* -Render (at the very least) /members/index as lua-
+
 
 h2. Medium term
 
-* -Convert production EQdkp database to Rails format-
-** -Ensure data matches up- (through tests?)
 * Administration
 ** New/Edit Item pages
 ** Edit Raid page
 ** New/Edit Punishment pages
 ** New/Edit Rank pages
+*** Hide overrides Member.active ?
 ** Quick ItemPrice interface?
 
 * Item Normalization
@@ -30,27 +24,23 @@ h2. Medium term
 
 h3. Interface Overhaul
 
-* Find sites I like and try to replicate them
-* -Tabbed interface-
-** Needs at least two levels - We click 'Items' then we want to have a row for filters ('All', 'Normal', 'Best in Slot', 'Situational', 'Rot')
-** ViewMember: Raids, Items, [Plugins: Wishlist/Achievements]; -Should all be Ajax loaders-
-** -ViewRaid: Attendees, Drops-
+* Item type filters
+** [Option] Make the 'Notes' value clickable to only show that type, and then put a 'clear' icon next to it?
 * Glyph icons similar to IPBoard 3 for edit/delete inside each row
-* Drop-down menu navigation system
+* Navigation
+** [Option] Drop-down menu navigation system
+** [Option] Left-hand menu navigation
 * Column sorting (Javascript? We use pagination)
 ** http://wiki.rubyonrails.com/rails/pages/SortHelper2
 
 h2. Long term
 
-* -Wowhead item lookup (@item_cache@ replica)-
 * Users & Permissions
 ** 'My Standing' link dependant on login status and whether or not a member of that name exists?
 ** PLEASE try to make it hook into IPB's auth system, or at least write an auth system for IPB that writes user changes to the DKP side
 * Wishlists
 * Achievements
 * Administration
-** -Punishment system, for when we want to affect someone's loot factor without adding an item-
-*** -Allow an expiry time-
 ** Logging ('Tsigo added a raid on 2009-01-01')
 * Exception handling so people can't tell it's Rails (?)
 ** http://hoptoadapp.com/welcome
