--- a/TODO.textile
+++ b/TODO.textile
@@ -24,7 +24,7 @@ h2. Medium term
 * Users & Permissions
 ** 'My Standing' link dependant on login status and whether or not a member of that name exists?
 ** PLEASE try to make it hook into IPB's auth system
-* Comments on stuff ('I was late fort this raid and didn't send you a tell, please add me anyway?!')
+* Comments on stuff ('I was late for this raid and didn't send you a tell, please add me anyway?!')
 ** Admin note section ('Modrack needs his [Betrayer of Humanity] changed to BiS once 3.1 hits')
 
 * Administration
