--- a/TODO.textile
+++ b/TODO.textile
@@ -1,28 +1,33 @@
 h1. Todo
 
-1-5, where five is a feature that has to be in before we can use the app in production
+h2. Priorities
 
-1 Logging of actions
-1 Statistics - number of members, raids, items
-1 XML resources
-2 "Who's Online" list
-2 Comments, Admin notes
-2 Searching
-3 Achievements
-3 Edit Raid interface
-3 New/Edit Item (Drop) interfaces
-3 New/Edit rank interfaces
-3 Performance; caching
-3 Real-time raid and item logging (online JuggyAttendance replacement)
-3 Redesign interface to better fit with the forums (Redesign the forums, I say!)
-3 Relative dates ("Falls of loot factor in x days"), "[Punishment] expires in 3 days")
-4 Item Type filtering
-4 Last Loot
-4 Styled 404/exception pages
-4 Summary page; class counts, attendance averages, loot factor averages
-5 "My Standing" for logged-in users
-5 Users/Permissions, attaching Members to Users
-5 Wishlists
+On a scale of 1-5, where 1 is a feature that *has* to be complete before we can use the app in production
+ 
+ 1 "My Standing" for logged-in users
+ 1 Users/Permissions, attaching Members to Users
+ 1 Wishlists
+ 
+ 3 Last Loot
+ 2 Styled 404/exception pages
+ 2 Summary page; class counts, attendance averages, loot factor averages
+ 
+ 3 Achievements
+ 3 Edit Raid interface
+ 3 New/Edit Item (Drop) interfaces
+ 3 New/Edit rank interfaces
+ 3 Performance; caching
+ 3 Real-time raid and item logging (online JuggyAttendance replacement)
+ 3 Redesign interface to better fit with the forums (Redesign the forums, I say!)
+ 3 Relative dates ("Falls off loot factor in x days"), "[Punishment] expires in 3 days")
+ 
+ 4 "Who's Online" list
+ 4 Comments, Admin notes
+ 4 Searching
+ 
+ 5 Logging of actions
+ 5 Statistics - number of members, raids, items
+ 5 XML resources
 
 h2. Bugs
 
