--- a/TODO.textile
+++ b/TODO.textile
@@ -6,16 +6,18 @@ On a scale of 1-5, where 1 is a feature that *has* to be complete before we can 
  
  1 "My Standing" for logged-in users
  1 Users/Permissions, attaching Members to Users
- 1 Wishlists
+ 1 Global Wishlist view
  
  2 Need to say "Hey, this site needs Javascript. You should turn that on."
  2 Last Loot
  2 Styled 404/exception pages
  2 Summary page; class counts, attendance averages, loot factor averages
+ 2 Search (for autocompleting Item name fields, going directly to member pages without knowing their ID)
  
  3 Achievements
  3 Edit Raid interface
- 3 New/Edit Item (Drop) interfaces
+ 3 New/Edit Loot interfaces
+ 3 New/Edit Item interfaces (mostly to delete bogus items)
  3 New/Edit rank interfaces
  3 Performance; caching
  3 Real-time raid and item logging (online JuggyAttendance replacement)
@@ -38,7 +40,6 @@ h2. Short term
 
 h2. Medium term
 
-* Wishlists
 * Users & Permissions
 ** 'My Standing' link dependant on login status and whether or not a member of that name exists?
 ** PLEASE try to make it hook into IPB's auth system
