--- a/TODO.textile
+++ b/TODO.textile
@@ -6,7 +6,7 @@ On a scale of 1-5, where 1 is a feature that *has* to be complete before we can 
  
  1 "My Standing" for logged-in users
  1 Users/Permissions, attaching Members to Users
- 1 Global Wishlist view
+ 1 Hide inactive members from global wishlist view
  
  2 Need to say "Hey, this site needs Javascript. You should turn that on."
  2 Last Loot
