--- a/TODO.textile
+++ b/TODO.textile
@@ -31,6 +31,7 @@ On a scale of 1-5, where 1 is a feature that *has* to be complete before we can 
 
 h2. Bugs
 
+* FIXME: Editing a wishlist item, and then clicking the button to add a new entry breaks the labels/autocomplete, because they're still going to the edit form.
 * Items:
 ActionView::TemplateError (String can't be coerced into Fixnum) on line #13 of app/views/items/index.html.haml:
 10:     - @items.each do |item|
